# Sk

skdresses-backend/: .env  Cargo.toml  Dockerfile
skdresses-backend/src/: main.rs  models.rs  routes.rs
skdresses-frontend/: Dockerfile  go.mod  main.go
skdresses-frontend/static/: style.css
skdresses-frontend/templates/: cart.html  categories.html  index.html  layout.html  login.html  signup.html
