[package]
name = "skdresses-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
actix-cors = "0.6"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"


